--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -5,6 +5,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Professor @ViewData["Professor"]</p>
+<p>Project developed for the <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/">C# course</a></p>
 
 <adress>
     <strong>More information: </strong> <a href="http://educandoweb.com.br">educandoweb.com.br</a>
